fuse with other

--- a/src/cv_basics/package.xml
+++ b/src/cv_basics/package.xml
@@ -13,6 +13,7 @@
   <depend>sensor_msgs</depend>
   <depend>std_msgs</depend>
   <depend>opencv2</depend>
+  <depend>req_res_str_service</depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
